[gd_scene load_steps=6 format=3 uid="uid://cp6goy5fp0qxy"]

[ext_resource type="Script" uid="uid://b0a2vnf5qx2we" path="res://UI/pause_menu/pause_menu.gd" id="1_0q86m"]
[ext_resource type="Material" uid="uid://durrpcq771hh0" path="res://UI/start_menu.tres" id="1_kju1d"]
[ext_resource type="Texture2D" uid="uid://cwermrpy2fvg4" path="res://icon.svg" id="2_0q86m"]
[ext_resource type="Script" uid="uid://diwd3lwjaguog" path="res://UI/start_tex_btn.gd" id="3_dlhnu"]
[ext_resource type="Material" uid="uid://ckugb1dgghr0y" path="res://UI/quit_menu_mat.tres" id="4_uk0xg"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0q86m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeTxtBtn" type="TextureButton" parent="VBoxContainer/PauseMarginContainer"]
material = ExtResource("1_kju1d")
layout_mode = 2
texture_normal = ExtResource("2_0q86m")
script = ExtResource("3_dlhnu")

[node name="Label" type="Label" parent="VBoxContainer/PauseMarginContainer/ResumeTxtBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="QuitTxtBtn" type="TextureButton" parent="VBoxContainer/QuitMarginContainer"]
material = ExtResource("4_uk0xg")
layout_mode = 2
texture_normal = ExtResource("2_0q86m")
script = ExtResource("3_dlhnu")

[node name="Label" type="Label" parent="VBoxContainer/QuitMarginContainer/QuitTxtBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1
